Fixed sidebar spacing

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -19,3 +19,7 @@ body {
   font-family: "Avenir-Next";
   height: 100%;
 }
+
+#root {
+  height: 100%;
+}
