--- a/client/src/components/Sidebar/Sidebar.scss
+++ b/client/src/components/Sidebar/Sidebar.scss
@@ -18,9 +18,6 @@ li {
   @include tablet {
     display: flex;
   }
-
-  @include desktop {
-  }
 }
 
 .sidebar-box {
@@ -44,7 +41,6 @@ li {
     background-color: $emm-new-denim;
     width: 115px;
     height: 52px;
-    // border: 2px solid $logo-blue;
 
     @include tablet {
       display: none;
@@ -75,10 +71,7 @@ li {
   &__list {
     display: flex;
     flex-direction: column;
-    //justify-content: space-between;
-    //align-content: center;
     list-style-type: none;
-    //height: 24px;
     text-align: center;
     background-color: $emm-new-denim;
     padding: 0;
@@ -86,7 +79,6 @@ li {
     top: 52px;
     right: 0;
     left: 0;
-    // left: 40%;
 
     @include tablet {
       flex-direction: column;
@@ -151,9 +143,5 @@ li {
         padding: 0 1rem 0 1rem;
       }
     }
-
-    // &:first-child {
-    //   padding-right: 1rem;
-    // }
   }
 }
