--- a/client/src/layouts/SidebarAndCard/SidebarAndCard.scss
+++ b/client/src/layouts/SidebarAndCard/SidebarAndCard.scss
@@ -4,6 +4,7 @@
 @use "../../styles/partials/colors" as *;
 
 .page-container {
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -25,6 +26,7 @@
   display: flex;
   flex-direction: column;
   @include tablet {
+    flex-grow: 2;
     flex-direction: row;
   }
   @include desktop {
